@@ -1,6 +1,5 @@
 # auto-generated shipit config file.
-steps = FindVersion, ChangeVersion, CheckChangeLog, DistTest
-#, Commit, Tag, MakeDist
+steps = FindVersion, ChangeVersion, CheckChangeLog, DistTest, Commit, Tag, MakeDist
 
 svk.tagpattern =  //mirror/Catalyst-Authentication-Credential-HTTP/1.000/tags/%v
 
