@@ -1,9 +1,5 @@
 . Document md5'd passwords for digest stuff
 . Add deprecation notice to old module.
-. document & test authorization_required_message
-. Test $self->_config->{authorization_required_message} + authorization_required_message = undef does not stamp on body.
 . Split auth headers / do auth methods again, and make authenticate call each in turn.
 . Document / test 'algorithm' config.
-. Test and document use_uri_for config
-
-
+. Test and document use_uri_for config & domain
