@@ -1,10 +1,13 @@
 1.003  2008-09-??
    - Add ability to override the realm name presented for authentication
-     when calling $c->authenticate. Docs and tests for this.
+     when calling $c->authenticate. Documentation and tests for this.
    - Clean up documentation of options inherited from 
-     Catalyst::Authentication::Credential::Password
+     Catalyst::Authentication::Credential::Password.
    - Added an example of calling methods in the credential module from a 
      controller to the POD.
+   - Tests for the authorization_required_message configuration parameter. 
+   - Document use_uri_for configuration option
+   - Document domain option (passed through from $c->authenticate)
 
 1.002  2008-09-03
    - Fix the assumptions that the password field is named password when doing 
